# keiba-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  metadata.json
backend/: README.md  alembic.ini  keiba-ai-backend.spec  pyproject.toml
backend/configs/: production_lgb.json  synthetic_lgb.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_agari_passing.py  0003_add_scrape_log_fetched_at_index.py  0004_add_bet_records.py  0005_add_race_name.py  0006_add_live_odds.py  0007_add_simulation_runs.py  0008_add_model_type.py  0009_add_simulation_model_run_id.py  0010_drop_live_odds.py  0011_model_type_default_nn.py  0012_add_horses_sire_dam_index.py
backend/scripts/: batch_size_experiment.py  conditional_logit_compare.py  ev_source_breakdown.py  exotic_backtest.py  feature_analysis.py  feature_importance_perm.py  feature_influence.py  feature_variants_experiment.py  fit_nn_combo_calibrators.py  mlp_feature_influence.py  model_side_ab.py  nn_vs_tree_roi.py  odds_head_experiment.py  roi_objective_experiment.py  run_sim_roi.py  seq_compare.py  seq_experiment.py  seq_integrated_experiment.py  seq_rigorous_experiment.py  top3_experiment.py  train_active_target.py  two_stage_experiment.py  value_bet_sweep.py  verify_future_predict.py  verify_richer_features.py  win_edge_bootstrap.py
backend/src/: main.py
backend/src/ai/: __init__.py  _pickle_compat.py  _registry_gbdt.py  _registry_nn.py  bet_odds.py  bet_strategy.py  calibrate.py  calibration_diagnosis.py  combo_calibration_diagnosis.py  evaluate.py  labels.py  predict.py  registry.py  simulation.py  simulation_persistence.py  temperature.py  types.py
backend/src/api/: deps.py  jobs.py  schemas.py
backend/src/core/: bet_types.py  config.py  logging.py  paths.py  settings_store.py
backend/src/db/: base.py  odds_db.py
backend/src/features/: builder.py  course.py  (+6 more)
backend/tests/: conftest.py  synthetic.py  test_ai_bet_odds.py  test_ai_bet_strategy.py  test_ai_betting_odds.py  test_ai_betting_strategy.py  test_ai_calibrate.py  test_ai_calibration_diagnosis.py  test_ai_combo_calibration_diagnosis.py  test_ai_conditional_calibration.py  test_ai_core_probabilities.py  test_ai_core_splits.py  test_ai_core_temperature.py  test_ai_cv.py  test_ai_evaluate.py  test_ai_evaluate_payback_place.py  test_ai_evaluation_backtest.py  test_ai_evaluation_payback_place.py  test_ai_inference_predict.py  test_ai_labels.py  test_ai_model_dataset.py  test_ai_model_loss.py  test_ai_model_net.py  test_ai_model_preprocess.py  test_ai_model_registry.py  test_ai_nn_dataset.py  test_ai_nn_fit_calibrator.py  test_ai_nn_loss.py  test_ai_nn_model.py  test_ai_nn_preprocess.py  test_ai_nn_stacking.py  test_ai_nn_train.py  test_ai_pl_loss.py  test_ai_predict.py  test_ai_predict_combinations.py  test_ai_predict_nn.py  test_ai_predict_shap.py  test_ai_registry.py  test_ai_registry_nn.py  test_ai_simulation.py  (+64 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar.rs
(+328 files in other folders)
