[project]
name = "keiba-ai"
version = "0.1.0"
description = "netkeiba scraper and LightGBM prediction backend (personal research)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "lightgbm>=4.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "optuna>=3.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
nn = [
    "torch>=2.0",
    "lightning>=2.0",
]

[project.scripts]
keiba-ingest = "jobs.ingest:cli_main"
keiba-ingest-shutuba = "jobs.ingest_shutuba:cli_main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ai",
    "src/api",
    "src/core",
    "src/db",
    "src/features",
    "src/jobs",
    "src/scraper",
    "src/services",
]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
