[package]
name = "keiba-ai"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "keiba-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
